--- a/charts/graphscope-interactive/templates/engine/statefulset.yaml
+++ b/charts/graphscope-interactive/templates/engine/statefulset.yaml
@@ -1,5 +1,3 @@
-{{- $frontendFullname := include "graphscope-interactive.frontend.fullname" . }}
-{{- $engineFullName := include "graphscope-interactive.engine.fullname" . }}
 {{- $releaseNamespace := .Release.Namespace }}
 {{- $clusterDomain := .Values.clusterDomain }}
 
@@ -39,8 +37,10 @@ spec:
         {{- include "graphscope-interactive.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 8 }}
         {{- end }}
     spec:
+      {{- if .Values.imagePullSecrets }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets: {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- end }}
       serviceAccountName: {{ include "graphscope-interactive.serviceAccountName" . }}
       {{- if .Values.engine.affinity }}
@@ -55,64 +55,22 @@ spec:
           image: {{ include "graphscope-interactive.engine.image" . }}
           imagePullPolicy: {{ .Values.engine.image.pullPolicy | quote }}
           command:
-            - /bin/bash
-            - -c
-            - |
-              echo "Starting engine..."
-              # first check interactive_config.yaml exists
-              if [ ! -f ${ENGINE_CONFIG_PATH} ]; then
-                #error exit
-                echo "${ENGINE_CONFIG_PATH} not found, exiting..."
-                exit 1
-              fi
-              # then check interactive_server binary exists and executable
-              if [ ! -x ${ENGINE_BINARY_PATH} ]; then
-                #error exit
-                echo "${ENGINE_BINARY_PATH} binary not found or not executable, exiting..."
-                exit 1
-              fi
-              # always try to load the built-in graph: gs_interactive_default_graph
-              # for case CURRENT_GRAPH is not the default_graph, we assume the data is already loaded.
-              # TODO.
-              builtin_graph_schema_path="${INTERACTIVE_WORKSPACE}/data/${DEFAULT_GRAPH_NAME}/graph.yaml"
-              builtin_graph_data_path="${INTERACTIVE_WORKSPACE}/data/${DEFAULT_GRAPH_NAME}/indices/"
-              builtin_graph_import_path="${INTERACTIVE_WORKSPACE}/data/${DEFAULT_GRAPH_NAME}/bulk_load.yaml"
-              # if builtin_graph_data_path exists, skip
-              if [ ! -d ${builtin_graph_data_path} ]; then
-                mkdir -p ${INTERACTIVE_WORKSPACE}/data/${DEFAULT_GRAPH_NAME}
-                echo "Loading builtin graph: ${DEFAULT_GRAPH_NAME} with command: $builtin_graph_loader_cmd"
-                cp /opt/flex/share/gs_interactive_default_graph/graph.yaml ${builtin_graph_schema_path}
-                cp /opt/flex/share/gs_interactive_default_graph/bulk_load.yaml ${builtin_graph_import_path}
-                export FLEX_DATA_DIR=/opt/flex/share/gs_interactive_default_graph/
-
-                builtin_graph_loader_cmd="${BULK_LOADER_BINARY_PATH} -g ${builtin_graph_schema_path} -d ${builtin_graph_data_path} -l ${builtin_graph_import_path}"
-                echo "Loading builtin graph: ${DEFAULT_GRAPH_NAME} with command: $builtin_graph_loader_cmd"
-                eval $builtin_graph_loader_cmd
-              fi
-
-              bash /etc/interactive/setup.sh
-              cmd="GLOG_v=10 ${ENGINE_BINARY_PATH} -c ${REAL_ENGINE_CONFIG_PATH}"
-              #cmd="${cmd} --enable-admin-service false -w ${INTERACTIVE_WORKSPACE}"
-              cmd="${cmd} -g ${builtin_graph_schema_path} --data-path ${builtin_graph_data_path}"
-              echo "Starting engine with command: $cmd"
-              eval $cmd
+            - {{ include "graphscope-interactive.engine.command" . | quote }}
           env:
             - name: INTERACTIVE_WORKSPACE
               value: {{ .Values.workspace | quote }}
-            - name: ENGINE_SERVICE_HOST
-              value: {{ $engineFullName }}-headless.{{ $releaseNamespace }}.svc.{{ $clusterDomain }}
-            - name: ENGINE_CONFIG_PATH
-              value: {{ include "graphscope-interactive.engineConfigPath" . }}
-            - name: REAL_ENGINE_CONFIG_PATH
-              value: {{ include "graphscope-interactive.realEngineConfigPath" . }}
-            - name: ENGINE_BINARY_PATH
-              value: {{ include "graphscope-interactive.engineBinaryPath" . }}
-            - name: ENGINE_SHARD_NUM
-              value: {{ .Values.engine.threadNumPerWorker | quote }}
-            - name: BULK_LOADER_BINARY_PATH
-              value: /opt/flex/bin/bulk_loader
-            - name: DEFAULT_GRAPH_NAME
-              value: {{ .Values.defaultGraph }}
+            - name: OSS_ACCESS_KEY_ID
+              value: {{ include "graphscope-interactive.ossAccessKeyId" .  }}
+            - name: OSS_ACCESS_KEY_SECRET
+              value: {{ include "graphscope-interactive.ossAccessKeySecret" . }}
+            - name: OSS_ENDPOINT
+              value: {{ include "graphscope-interactive.ossEndpoint" . }}
+            - name: OSS_BUCKET_NAME
+              value: {{ include "graphscope-interactive.ossBucketName" .  }}
+            - name: FLEX_INTERACTIVE_ENGINE_IP  
+              valueFrom:  
+                fieldRef:  
+                  fieldPath: status.podIP 
           ports:
             - name: admin-port
               containerPort: {{ .Values.engine.service.adminPort }}
@@ -125,13 +83,39 @@ spec:
             - name: workspace
               mountPath: {{ .Values.workspace }}
             - name: config
-              mountPath: {{ include "graphscope-interactive.engineConfigPath" . }}
+              mountPath: {{ include "graphscope-interactive.engine.configFileMountPath" . }}
               subPath: interactive_config.yaml
-            - name: config
-              mountPath: /etc/interactive/setup.sh
-              subPath: setup.sh
+            - name: engine-entrypoint
+              mountPath: {{ include "graphscope-interactive.engine.entrypointMountPath" . }}
+              subPath: engine_entrypoint.sh
+          {{- if and .Values.engine.livenessProbe .Values.engine.livenessProbe.enabled }}
+          livenessProbe:
+            httpGet:
+             path: {{ .Values.engine.livenessProbe.path }}
+              port: {{ .Values.engine.service.adminPort }}
+            initialDelaySeconds: {{ .Values.engine.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.engine.livenessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.engine.livenessProbe.timeoutSeconds }}
+            successThreshold: {{ .Values.engine.livenessProbe.successThreshold }}
+            failureThreshold: {{ .Values.engine.livenessProbe.failureThreshold }}
+          {{- end }}
+          {{- if and .Values.engine.readinessProbe .Values.engine.readinessProbe.enabled }}
+          readinessProbe:
+            httpGet:
+              path: {{ .Values.engine.readinessProbe.path }}
+              port: {{ .Values.engine.service.queryPort }}
+            initialDelaySeconds: {{ .Values.engine.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.engine.readinessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.engine.readinessProbe.timeoutSeconds }}
+            successThreshold: {{ .Values.engine.readinessProbe.successThreshold }}
+            failureThreshold: {{ .Values.engine.readinessProbe.failureThreshold }}
+          {{- end }}
       volumes:
         - name: config
+          configMap:
+            name: {{ include "graphscope-interactive.configmapName" . }}
+            defaultMode: 0755
+        - name: engine-entrypoint
           configMap:
             name: {{ include "graphscope-interactive.configmapName" . }}
             defaultMode: 0755
