--- a/interactive_engine/compiler/pom.xml
+++ b/interactive_engine/compiler/pom.xml
@@ -362,7 +362,7 @@
                         <exclude>**/IrPatternTest.java</exclude>
                         <exclude>**/MovieTest.java</exclude>
                         <exclude>**/GraphAlgoTest.java</exclude>
-                        <exclude>**/MovieWriteTest.java</exclude>
+                        <exclude>**/ModernGraphWriteTest.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
