fix(interactive): Support Add Vertex and Edge Operations in Interactive (#4591)
<!--
Thanks for your contribution! please review
https://github.com/alibaba/GraphScope/blob/main/CONTRIBUTING.md before
opening an issue.
-->

## What do these changes do?

Support the following Cypher queries to add vertex and edge data by the
Interactive Python SDK:

1. Add Vertex
```
CREATE (charlie:Person {name: 'Charlie', id: 211, age: 32})
```
2. Add Edge
```
CREATE (charlie:Person {id: 211})-[:ACTED_IN]->(movie:Movie {name: 'Wall Street'});
```

Continuous `Add` operations will be batched, and leverage the batch api
provided by Python SDK to implement.

<!-- Please give a short brief about these changes. -->

## Related issue number

<!-- Are there any issues opened that will be resolved by merging this
change? -->

Fixes

---------

Co-authored-by: xiaolei.zl <xiaolei.zl@alibaba-inc.com>

--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -341,6 +341,13 @@ jobs:
            ${GITHUB_WORKSPACE}/flex/interactive/examples/modern_graph/graph.yaml ${INTERACTIVE_ENGINE_HOME}/compiler/src/test/resources/statistics/modern_statistics.json \
           "MATCH(n) return count(n);" /tmp/physical_plan_gen_config.yaml
 
+    - name: Tests cypher write
+      env:
+        INTERACTIVE_WORKSPACE: /tmp/interactive_workspace
+      run: |
+        cd ${GITHUB_WORKSPACE}/flex/tests/hqps
+        bash hqps_cypher_write_test.sh ${INTERACTIVE_WORKSPACE} modern_graph ./interactive_config_test.yaml
+
     - name: Run End-to-End cypher adhoc ldbc query test
       env:
         GS_TEST_DIR: ${{ github.workspace }}/gstest
