--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   PR-Check:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     permissions:
       pull-requests: write
 
@@ -93,6 +93,11 @@ jobs:
       with:
          distribution: 'zulu'
          java-version: '11'
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
 
     - name: Get PR Changes
       uses: dorny/paths-filter@v3
