--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -94,6 +94,11 @@ jobs:
          distribution: 'zulu'
          java-version: '11'
 
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+
     - name: Get PR Changes
       uses: dorny/paths-filter@v3
       id: changes
